# barq-fleet-management

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  ANALYTICS_CODE_REVIEW.md  ANALYTICS_SECURITY_AUDIT_REPORT.md  ANALYTICS_SECURITY_QUICK_FIXES.md  API_DOCUMENTATION_INDEX.md  API_ENDPOINTS_DOCUMENTATION.md  API_ENDPOINTS_SUMMARY.md  CD_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CI_CD_DELIVERY_REPORT.md  CI_CD_IMPLEMENTATION_REPORT.md  CI_CD_INDEX.md  CI_CD_SETUP_CHECKLIST.md  CI_CD_SUMMARY.md  CLAUDE.md  CODEBASE_ANALYSIS_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_FLOW.md  DEPLOYMENT_QUICK_REFERENCE.md  DOCUMENTATION_INDEX.md  E2E_TEST_REPORT.md  FRONTEND_OPTIMIZATION_COMPLETE.md  INFRASTRUCTURE_READINESS_REPORT.md  Makefile  NEXT_STEPS.md  OPTIMIZATION_RESULTS.md  P0_SECURITY_COMPLETE.md  PERFORMANCE_BASELINE_REPORT.md  PERFORMANCE_QUICK_REFERENCE.md  PERFORMANCE_REPORT.md  PERFORMANCE_SUMMARY.txt  PRODUCTION_CHECKLIST.md  PROJECT_COMPLETE.md  README.md  SCHEMA_CONVENTIONS.md  SECURITY_AUDIT_SUMMARY.txt  SECURITY_P0_SUMMARY.md  (+23 more)
backend/: .env.development.example  .env.example  .env.production.example  ADMIN_MODULE_CHECKLIST.md  ADMIN_MODULE_DOCUMENTATION.md  ADMIN_MODULE_SUMMARY.md  ADMIN_SECURITY_SUMMARY.md  CRUD_MIGRATION_PLAN.md  DATABASE_AUDIT_SUMMARY.md  DATABASE_FIXES_MIGRATION.sql  DATABASE_OPTIMIZATION_GUIDE.md  DATABASE_RELATIONSHIPS.md  DATABASE_SCHEMA_AUDIT_REPORT.md  DATA_FLOW_DOCUMENTATION.md  Dockerfile  Dockerfile.prod  MODEL_SCHEMA_DISCREPANCIES.md  OPERATIONS_API_SUMMARY.md  OPTIMIZATION_QUICK_REFERENCE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_CONFIGURATION_GUIDE.md  PERFORMANCE_QUICK_REFERENCE.md  README.md  alembic.ini  (+13 more)
(+1133 files in other folders)
